@Ignored Test methods / Class Marked with @Category(ProblematicTest.class)
frequently Failing test marked with @Category(ProblematicTest.class)

pom.xml added a  problematic-tests profile,

added <excludedGroups>com.hazelcast.test.annotation.ProblematicTest</excludedGroups> to slow-tests, all-tests profile,  and for "quick test"

ready for a problematic jenkins job